# steelwool

./: .gitignore  Cargo.toml  LICENSE  README.md  package.json
.github/workflows/: rust.yml
python/: README.md  pyproject.toml  requirements.txt
python/src/steelwool/: __init__.py  _context_builder.py  _enums.py  _types.py  _unresolved_response.py
rust/: Cargo.toml  README.md
rust/src/: lib.rs
rust/src/providers/: ollama.rs  openai.rs
rust/tests/: ollama_integration_tests.rs  openai_integration_tests.rs
src/: lib.rs
src/providers/: ollama.rs
tests/: integration_tests.rs  ollama_integration_tests.rs
typescript/: index.ts  package-lock.json  package.json  tsconfig.json
