[package]
name = "steelwool"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Lightweight library for delivering LLM services"

[features]
default = []
ollama = ["ollama-rs", "tokio-runtime"]
tokio-runtime = ["tokio"]

[dependencies]
futures = "0.3.31"
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
tokio = { version = "^1.0", features = ["full"], optional = true }

[dependencies.ollama-rs]
version = "0.2.6"
optional = true
features = ["stream"] 
